Alter some services;