@@ -1,7 +1,9 @@
 package ru.golfstream.project.service.impl;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.parameters.P;
 import org.springframework.stereotype.Service;
+import ru.golfstream.project.entity.Employee;
 import ru.golfstream.project.entity.User;
 import ru.golfstream.project.entity.Purchase;
 import ru.golfstream.project.entity.Voucher;
@@ -10,7 +12,9 @@ import ru.golfstream.project.exception.exceptions.voucher.FillVoucherException;
 import ru.golfstream.project.repos.UserRepo;
 import ru.golfstream.project.repos.PurchaseRepo;
 import ru.golfstream.project.repos.VoucherRepo;
-import ru.golfstream.project.rest.dto.response.PurchaseDto;
+import ru.golfstream.project.rest.dto.mapper.PurchaseMapper;
+import ru.golfstream.project.rest.dto.mapper.VoucherMapper;
+import ru.golfstream.project.rest.dto.response.PurchaseResponse;
 import ru.golfstream.project.service.PurchaseService;
 
 import java.time.LocalDate;
@@ -24,33 +28,31 @@ public class PurchaseServiceImpl implements PurchaseService {
     final PurchaseRepo purchaseRepo;
     private final VoucherRepo voucherRepo;
     private final UserRepo clientRepo;
+    private final PurchaseMapper purchaseMapper;
 
     @Override
-    public List<PurchaseDto> findPurchaseOfVoucher(Long id) {
-        Optional<Voucher> voucherFromDb = voucherRepo.findById(id);
-        if(voucherFromDb.isEmpty()){
-            throw new NotFoundException("Нет путёвки с ID = " + id + "!");
-        }
-        List<Purchase> purchases = purchaseRepo.findByVoucher(voucherFromDb.get());
+    public List<PurchaseResponse> getPurchaseOfVoucher(Long id) {
+        Optional<Voucher> voucher = voucherRepo.findById(id);
+        if(voucher.isEmpty()) throw new NotFoundException("Not found VOUCHER with id: " + id + "!");
+        List<Purchase> purchases = purchaseRepo.findByVoucher(voucher.get());
         return purchases.stream()
-                .map(PurchaseServiceImpl::buildPurchaseDto)
-                .collect(Collectors.toList());
+                .map(purchaseMapper::toResponse)
+                .toList();
     }
 
     @Override
-    public PurchaseDto buy(Long idClient, Long idVoucher) {
-        Optional<User> clientFromDb = clientRepo.findById(idClient);
+    public PurchaseResponse buy(Long idUser, Long idVoucher) {
+        Optional<User> clientFromDb = clientRepo.findById(idUser);
         Optional<Voucher> voucherFromDb = voucherRepo.findById(idVoucher);
         if(clientFromDb.isEmpty()){
-            throw new NotFoundException("Нет клиента с ID = " + idClient + "!");
+            throw new NotFoundException("Not found USER with id: " + idUser + "!");
         }
         if(voucherFromDb.isEmpty()){
-            throw new NotFoundException("Нет путёвки с ID = " + idVoucher + "!");
+            throw new NotFoundException("Not found VOUCHER with id: " + idVoucher + "!");
         }
-
         Voucher voucher = voucherFromDb.get();
-        if(voucher.getReservation().equals(voucher.getQuantity())){
-            throw new FillVoucherException("Все путёвки с ID = " + idVoucher + " раскуплены!");
+        if(voucher.getReservation() >= (voucher.getQuantity())){
+            throw new FillVoucherException("Every VOUCHER with id: " + idVoucher + " sold!");
         }
         voucher.setReservation(voucher.getReservation() + 1L);
         voucherRepo.saveAndFlush(voucher);
@@ -61,19 +63,18 @@ public class PurchaseServiceImpl implements PurchaseService {
         purchase.setDateOfPurchase(LocalDate.now());
         purchaseRepo.saveAndFlush(purchase);
 
-        return buildPurchaseDto(purchase);
+        return purchaseMapper.toResponse(purchase);
     }
 
     @Override
     public void delete(Long id) {
-
+        Optional<Purchase> purchase = purchaseRepo.findById(id);
+        purchase.ifPresent(purchaseRepo::delete);
     }
 
-    protected static PurchaseDto buildPurchaseDto(Purchase purchase) {
-        return PurchaseDto.builder()
-                .idVoucher(purchase.getVoucher().getId())
-                .idClient(purchase.getUser().getId())
-                .dateOfPurchase(purchase.getDateOfPurchase())
-                .build();
+    private Purchase checkExistAndGetPurchaseById(Long id){
+        Optional<Purchase> purchase = purchaseRepo.findById(id);
+        if(purchase.isEmpty()) throw new NotFoundException("Not found PURCHASE with id: " + id + "!");
+        return purchase.get();
     }
 }
